# homework_8.3-

./: README.md  consumer_email.py  consumer_sms.py  contact_model.py  producer.py  pyproject.toml
