[tool.poetry]
name = "testy"
version = "0.1.0"
description = ""
authors = ["SashaKuspys <134163412+SashaKuspys@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^20.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
